@@ -13,7 +13,7 @@ function follow(user, callback) {
             console.log(user + ': ?');
         } else {
             var data = page.evaluate(function () {
-                return document.querySelector('div.timeline-following').innerText;
+                return document.querySelector('div.profile td.stat.stat-last div.statnum').innerText;
             });
             console.log(user + ': ' + data);
         }
